--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxt/test-utils": "^3.0.0-rc.3",
     "ant-design-vue": "^1.7.8",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
@@ -21,10 +22,12 @@
   "devDependencies": {
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
+    "@types/jest": "^27.5.1",
+    "@types/mocha": "^9.1.1",
     "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.4",
-    "jest": "^27.4.4",
+    "jest": "^27.5.1",
     "ts-jest": "^27.1.1",
     "vue-jest": "^3.0.4"
   }
